0.03
 - Fix example in doc.
 - Remove trailing whitespace.
 - Update META.yml file.

0.02 2022-09-09T17:28:55+02:00
 - Support variables for insert().

0.01 2022-09-08T01:46:31+02:00
 - First version.