@@ -1,4 +1,5 @@
 0.03
+ - Add plugin support.
  - Fix example in doc.
  - Remove trailing whitespace.
  - Update META.yml file.
